RESOLVED FIXED211478
Crash under _LSSetApplicationInformationItem()
https://bugs.webkit.org/show_bug.cgi?id=211478
Summary Crash under _LSSetApplicationInformationItem()
Chris Dumez
Reported 2020-05-05 16:20:55 PDT
Crash under _LSSetApplicationInformationItem(): Thread 4 Crashed:: Dispatch queue: com.apple.root.default-qos 0 libsystem_kernel.dylib 0x00007fff7105849a __pthread_kill + 10 1 libsystem_pthread.dylib 0x00007fff7111f6d0 pthread_kill + 263 2 libsystem_c.dylib 0x00007fff70fcf87c abort + 120 3 libgmalloc.dylib 0x000000010b17a605 GMfree.cold.1 + 33 4 libgmalloc.dylib 0x000000010b1790b2 GMfree + 64 5 libdispatch.dylib 0x00007fff70ea0762 _dispatch_dispose + 117 6 libxpc.dylib 0x00007fff7116275b _xpc_serializer_dispose + 71 7 libxpc.dylib 0x00007fff7115fd58 -[OS_xpc_object dealloc] + 17 8 com.apple.LaunchServices 0x00007fff2c7d3e81 _LSSetApplicationInformation + 630 9 com.apple.LaunchServices 0x00007fff2c7d979e _LSSetApplicationInformationItem + 99 10 libdispatch.dylib 0x00007fff70ea014d _dispatch_call_block_and_release + 12 11 libdispatch.dylib 0x00007fff70ea132f _dispatch_client_callout + 8 12 libdispatch.dylib 0x00007fff70ea384c _dispatch_queue_override_invoke + 777 13 libdispatch.dylib 0x00007fff70eb0156 _dispatch_root_queue_drain + 326 14 libdispatch.dylib 0x00007fff70eb08b7 _dispatch_worker_thread2 + 92 15 libsystem_pthread.dylib 0x00007fff7111c514 _pthread_wqthread + 244 16 libsystem_pthread.dylib 0x00007fff7111b52b start_wqthread + 15
Attachments
Patch (3.27 KB, patch)
2020-05-05 16:23 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-05-05 16:21:05 PDT
Chris Dumez
Comment 2 2020-05-05 16:23:38 PDT
EWS
Comment 3 2020-05-05 16:52:52 PDT
Committed r261206: <https://trac.webkit.org/changeset/261206> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398564 [details].
Note You need to log in before you can comment on or make changes to this bug.